--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,18 +25,6 @@
             android:scaleType="fitCenter"
             android:visibility="visible"
             android:layout_marginLeft="8dp"/>
-        <TextView
-            android:id="@+id/language_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:background="@color/transparent"
-            android:drawableRight="@drawable/ic_drop_down_black"
-            android:fontFamily="sans-serif"
-            android:text="English"
-            android:layout_centerHorizontal="true"
-            android:textColor="@color/black"
-            android:textSize="16sp" />
     </RelativeLayout>
 
 
@@ -201,6 +189,45 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/btn_register" />
 
+            <LinearLayout
+                android:layout_marginTop="16dp"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/txt_signin_other"
+                android:orientation="horizontal"
+                android:id="@+id/btn_login_phone"
+                android:layout_width="0dp"
+                android:layout_height="36dp"
+                android:background="@drawable/bg_button_sign_phone"
+                android:elevation="3dp"
+                android:paddingLeft="8dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintWidth_percent="0.34"
+                tools:ignore="MissingConstraints">
+
+                <ImageView
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/ic_phone" />
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="20dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="8dp"
+                    android:background="@color/white" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:paddingRight="8dp"
+                    android:fontFamily="sans-serif-medium"
+                    android:text="@string/sso_phone"
+                    android:textColor="@color/white"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/layout_signin_other"
                 android:layout_width="0dp"
@@ -209,7 +236,7 @@
                 android:visibility="visible"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/txt_signin_other"
+                app:layout_constraintTop_toBottomOf="@id/btn_login_phone"
                 app:layout_constraintWidth_percent="0.67">
 
                 <LinearLayout
