Load quan an firebase

--- a/app/src/main/res/layout/activity_phone.xml
+++ b/app/src/main/res/layout/activity_phone.xml
@@ -15,7 +15,7 @@
         android:id="@+id/txt_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginBottom="45dp"
         android:fontFamily="@font/audiowide"
         android:gravity="center_horizontal"
         android:text="@string/phone_login"
@@ -39,8 +39,9 @@
                 android:layout_height="wrap_content"
                 app:ccp_defaultNameCode="VN" />
             <EditText
+                android:layout_weight="1"
                 android:id="@+id/phoneText"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="8dp"
@@ -65,7 +66,7 @@
         android:elevation="3dp"
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
-        android:text="Send Code"
+        android:text="@string/send_code"
         android:onClick="sendCode"
         android:textAllCaps="true"
         android:textColor="@color/white"
@@ -80,7 +81,7 @@
         android:elevation="3dp"
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
-        android:text="Resend Code"
+        android:text="@string/resend_code"
         android:onClick="resendCode"
         android:textAllCaps="true"
         android:textColor="@color/white"
@@ -95,7 +96,7 @@
         android:layout_marginBottom="8dp"
         android:background="@drawable/bg_ed_register"
         android:fontFamily="sans-serif"
-        android:hint="Code"
+        android:hint="@string/code"
         android:imeOptions="actionNext"
         android:inputType="number"
         android:paddingLeft="16dp"
@@ -112,7 +113,7 @@
         android:elevation="3dp"
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
-        android:text="VerifyCode"
+        android:text="@string/verifyCode"
         android:onClick="verifyCode"
         android:textAllCaps="true"
         android:textColor="@color/white"
