--- a/app/src/main/res/layout/dialog_network_notify.xml
+++ b/app/src/main/res/layout/dialog_network_notify.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:background="@color/trans"
     android:orientation="vertical"
     android:gravity="center_vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -7,11 +8,12 @@
     android:layout_height="match_parent">
 
     <FrameLayout
+        android:id="@+id/btn_setting"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <de.hdodenhof.circleimageview.CircleImageView
+        <ImageView
             android:background="@drawable/bg_circle_network"
             android:src="@drawable/ic_signal_wifi"
             android:padding="45dp"
@@ -31,6 +33,7 @@
     </FrameLayout>
 
     <TextView
+        android:layout_marginBottom="100dp"
         android:fontFamily="sans-serif"
         android:layout_marginTop="10dp"
         android:textColor="@color/color_btn_signin_google"
