--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -39,11 +39,11 @@
 
     </ImageView>
 
-    <RelativeLayout
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/rcv_notify_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    </RelativeLayout>
+    </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
