--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FFC107</color>
+    <color name="colorPrimary">#FFD13E</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#FF8400</color>
     <color name="white">#ffffff</color>
