--- a/app/src/main/res/layout/item_restaurant_horizontal.xml
+++ b/app/src/main/res/layout/item_restaurant_horizontal.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:id="@+id/viewRoot"
     android:layout_marginTop="8dp"
     android:layout_marginLeft="8dp"
     android:layout_marginBottom="8dp"
