--- a/app/src/main/res/layout/fragment_restaurantdetail_review.xml
+++ b/app/src/main/res/layout/fragment_restaurantdetail_review.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -7,6 +8,14 @@
     <android.support.v7.widget.RecyclerView
         android:layout_marginTop="10dp"
         android:id="@+id/ryc_review_res"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </android.support.v7.widget.RecyclerView>
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_marginTop="10dp"
+        android:id="@+id/rcv_image_res"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
