--- a/app/src/main/res/layout/activity_detail_restaurant.xml
+++ b/app/src/main/res/layout/activity_detail_restaurant.xml
@@ -28,25 +28,11 @@
                     android:layout_height="180dp">
 
                     <ImageView
+                        android:visibility="visible"
                         android:id="@+id/imgQuanAnChiTiet"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="fitXY"/>
-
-                    <VideoView
-                        android:id="@+id/videoTrailer"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:visibility="gone" />
-
-                    <ImageView
-                        android:id="@+id/imgPlayVideo"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:src="@drawable/play"
-                        android:visibility="gone" />
 
                 </FrameLayout>
                 <android.support.v7.widget.Toolbar
