--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:gpb="http://schemas.android.com/tools"
     android:background="@color/colorPrimary"
     android:orientation="vertical">
 
@@ -13,7 +13,7 @@
         android:layout_gravity="center"
         android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp">
 
         <ImageView
             android:layout_gravity="center"
@@ -29,17 +29,31 @@
             android:layout_height="wrap_content"
             android:text="@string/app_name"
             android:textColor="@color/white"
-            android:textSize="50dp"
+            android:textSize="50sp"
             app:fontFamily="@font/audiowide" />
 
-        <com.daimajia.numberprogressbar.NumberProgressBar
+        <com.jpardogo.android.googleprogressbar.library.GoogleProgressBar
             android:layout_marginTop="20dp"
             android:layout_gravity="center"
             style="@style/NumberProgressBar_Funny_Orange"
             android:id="@+id/number_progress_bar"
-            android:layout_width="200dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            gpb:type="sweep"
+            app:type="chrome_floating_circles"
             />
+
+        <com.tomer.fadingtextview.FadingTextView
+            android:id="@+id/fadingText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            app:texts="@array/text"
+            app:timeout="500" />
 
     </LinearLayout>
 </LinearLayout>
