--- a/app/src/main/res/layout/fragment_retaurantdetial_info.xml
+++ b/app/src/main/res/layout/fragment_retaurantdetial_info.xml
@@ -1,10 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:background="@color/white"
-    android:orientation="vertical"
+<android.support.v4.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <LinearLayout
+        android:background="@color/white"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <fragment
+        android:layout_margin="8dp"
+        android:name="com.google.android.youtube.player.YouTubePlayerSupportFragment"
+        android:id="@+id/videoTrailer"
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:layout_gravity="center"
+        android:visibility="gone" />
 
     <LinearLayout
         android:id="@+id/v_call_out"
@@ -79,13 +92,13 @@
                 android:layout_height="150dp"/>
 
             <TextView
-                android:textColor="@color/transWhite"
+                android:textColor="@color/black"
                 android:textSize="12sp"
-                android:padding="10dp"
+                android:padding="8dp"
                 android:id="@+id/tvAddressMap"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
         </FrameLayout>
-
-</LinearLayout>
+    </LinearLayout>
+</android.support.v4.widget.NestedScrollView>
