--- a/app/src/main/res/layout/item_menu_restaurantdetail.xml
+++ b/app/src/main/res/layout/item_menu_restaurantdetail.xml
@@ -59,12 +59,14 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:visibility="gone"
             android:id="@+id/btn_remove"
             android:src="@drawable/remove"
             android:layout_width="20dp"
             android:layout_height="20dp" />
 
         <TextView
+            android:visibility="gone"
             android:id="@+id/tv_countMenu"
             android:textSize="16sp"
             android:textColor="@color/black"
