--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,25 +10,8 @@
         android:id="@+id/my_awesome_toolbar"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:layout_alignParentBottom="true"
         android:minHeight="?attr/actionBarSize"
         android:background="?attr/colorPrimary">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-            <EditText
-                android:visibility="gone"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
 
         <TextView
             android:visibility="visible"
@@ -41,14 +24,6 @@
             android:text="@string/app_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-
-        <ImageView
-            android:layout_marginRight="8dp"
-            android:layout_gravity="right"
-            android:src="@drawable/ic_search"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        </LinearLayout>
 
     </android.support.v7.widget.Toolbar>
 
@@ -526,6 +501,7 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:id="@+id/tv_more"
                     android:textColor="@color/searchbox_hint_text_color"
                     android:text="@string/more"
                     android:textSize="14sp"
