--- a/app/src/main/res/layout/activity_detail_restaurant.xml
+++ b/app/src/main/res/layout/activity_detail_restaurant.xml
@@ -48,6 +48,7 @@
                         android:layout_height="40dp">
 
                         <TextView
+                            android:id="@+id/tv_mark"
                             android:fontFamily="sans-serif-medium"
                             android:layout_gravity="center"
                             android:textSize="16sp"
