--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:minHeight="?attr/actionBarSize"
-        android:background="@color/white">
+        android:background="@color/colorPrimary">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -32,7 +32,7 @@
                 android:textSize="22sp"
                 android:layout_weight="1"
                 android:layout_gravity="center"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/white"
                 android:gravity="center"
                 android:fontFamily="sans-serif-medium"
                 android:text="@string/app_name"
@@ -43,17 +43,13 @@
                 android:id="@+id/btn_search"
                 android:layout_marginRight="8dp"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_search_black_24dp"
+                android:src="@drawable/ic_search"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp" />
         </LinearLayout>
 
     </android.support.v7.widget.Toolbar>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="@color/searchbox_hint_text_color"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rcv_restaurant"
