--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -27,17 +27,13 @@
 
     </android.support.v7.widget.Toolbar>
 
-    <ImageView
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="24dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/bg_baner"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
+    <android.support.v4.view.ViewPager
+        android:layout_marginLeft="8dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginRight="8dp"
         android:layout_width="match_parent"
-        android:layout_height="130dp">
-
-    </ImageView>
+        android:layout_height="150dp"
+        android:id="@+id/viewPager"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rcv_notify_list"
