--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -18,6 +18,7 @@
             android:layout_height="wrap_content">
 
             <LinearLayout
+                android:id="@+id/view_city"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:layout_width="wrap_content"
