--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="color_btn_signin_google_pressed">#c6483e</color>
     <color name="btn_exit">#bdbdbd</color>
     <color name="searchbox_hint_text_color">#737373</color>
+    <color name="grey">#CAC9C9</color>
     <color name="color_press_bg">#34000000</color>
     <color name="note_passcode">#f5f5f5</color>
     <color name="bg_grey">#80F7F2F2</color>
