--- a/app/src/main/res/drawable/bg_square_yellow.xml
+++ b/app/src/main/res/drawable/bg_square_yellow.xml
@@ -7,7 +7,7 @@
         android:radius="5dp"/>
 
     <solid
-        android:color="@color/colorPrimary"/>
+        android:color="@color/defaultColor"/>
 
     <size
         android:width="120dp"
