--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -25,6 +25,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:id="@+id/tv_city"
                     android:textColor="@color/white"
                     android:fontFamily="sans-serif-medium"
                     android:text="HCM City"
@@ -68,9 +69,45 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp" />
+
+            <ImageView
+                android:visibility="gone"
+                android:id="@+id/btn_close"
+                android:layout_marginRight="8dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_close_black_24dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp" />
         </LinearLayout>
 
     </android.support.v7.widget.Toolbar>
+
+    <LinearLayout
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="8dp"
+        android:background="@color/bg_grey"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/tv_address"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:layout_weight="1"
+            android:text="@string/address_user"
+            android:textSize="14sp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
+
+        <ImageView
+            android:id="@+id/btn_map"
+            android:src="@drawable/ic_navigate_next_24dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rcv_restaurant"
