--- a/app/src/main/res/layout/dialog_city.xml
+++ b/app/src/main/res/layout/dialog_city.xml
@@ -7,10 +7,12 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <ImageView
+            android:id="@+id/close_dialog"
             android:layout_marginLeft="8dp"
             android:layout_gravity="center"
             android:src="@drawable/ic_close_black_24dp"
@@ -18,13 +20,23 @@
             android:layout_height="wrap_content" />
 
         <TextView
+            android:layout_weight="1"
             android:fontFamily="sans-serif-medium"
             android:textColor="@color/black"
             android:gravity="center"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:text="@string/city"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="?attr/actionBarSize" />
+
+        <TextView
+            android:textColor="@color/colorAccent"
+            android:layout_marginRight="8dp"
+            android:id="@+id/tv_done"
+            android:text="@string/done"
+            android:textSize="16sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <View
