--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,14 +14,15 @@
     <color name="color_btn_signin_google_pressed">#c6483e</color>
     <color name="btn_exit">#bdbdbd</color>
     <color name="searchbox_hint_text_color">#737373</color>
-    <color name="grey">#CAC9C9</color>
+    <color name="grey">#D7E7E6E6</color>
     <color name="color_press_bg">#34000000</color>
     <color name="note_passcode">#f5f5f5</color>
     <color name="bg_grey">#80F7F2F2</color>
     <color name="bg_green">#FF4EDD55</color>
     <color name="bg_yellow">#F7D702</color>
     <color name="bg_purple">#7F48DF</color>
-    <color name="defaultColor">#EEDC75</color>
+    <color name="defaultColor">#FFEB48</color>
+    <color name="bg_discount">#FCF7D9</color>
     <color name="trans">#8A585858</color>
     <color name="transBlack">#73000000</color>
     <color name="transWhite">#99FFFFFF</color>
